# adventofcode

./: .gitignore  CMakeLists.txt
2019/: CMakeLists.txt
2019/day02/: main.cpp
2020/: CMakeLists.txt
2020/day01/: main.cpp
2020/day02/: main.cpp
2021/day 1/: main.cpp
2021/day 10/: main.cpp
2021/day 11/: main.cpp
2021/day 12/: main.cpp
2021/day 2/: main.cpp
2021/day 3/: main.cpp
2021/day 5/: main.cpp
2021/day 6/: main.cpp
2021/day 7/: main.cpp
2021/day 8/: main.cpp
2021/day09/: main.cpp
2021/day13/: main.cpp
2021/day14/: main.cpp
2022/day 11/: main.cpp
2022/day 13/: main.cpp
2022/day 3/: main.cpp
2022/day 4/: main - Copy.cpp
2022/day 5/: main.cpp
2022/day 6/: main.cpp
2022/day 7/: main.cpp
2022/day 8/: main - Copy.cpp
2022/day 9/: main.cpp
2022/day 9 2/: main.cpp
2022/day04/: main.cpp
2023/: CMakeLists.txt
2023/day12/: CMakeLists.txt  main.cpp
2024/: .gitignore  CMakeLists.txt
2024/day01/: CMakeLists.txt  day01.cpp
2024/day02/: CMakeLists.txt  day02.cpp
2024/day03/: CMakeLists.txt  day03.cpp
2024/day04/: CMakeLists.txt  day04.cpp
2024/day05/: CMakeLists.txt  day05.cpp
2024/day06/: CMakeLists.txt  day06.cpp
2024/day07/: CMakeLists.txt  day07.cpp
2024/day08/: CMakeLists.txt  day08.cpp
2025/day10/: CMakeLists.txt  part1.cpp  part2.cpp
day 10/: main.cpp
day 12/: main.cpp
day 13/: a.py
day 14/: main.cpp
day 2/: main.cpp
day 4/: main.cpp
day 6/: main.cpp
day 7/: main.cpp  output.txt
day 8/: main.cpp
day01/: main.cpp
day05/: main.cpp
day09/: main.cpp
day1/: main.cpp
(+59 files in other folders)
